--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -7,6 +7,7 @@
             {% block title %}
             {% endblock title %}
         </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{% static 'portfolio/styles.css' %}">
         <script src="{% static 'portfolio/script.js' %}"></script>
     </head>
