--- a/portfolio/templates/portfolio/base.html
+++ b/portfolio/templates/portfolio/base.html
@@ -7,7 +7,7 @@
             {% block title %}
             {% endblock title %}
         </title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=0.86, maximum-scale=5.0, minimum-scale=0.86">
         <link rel="stylesheet" href="{% static 'portfolio/styles.css' %}">
         <script src="{% static 'portfolio/script.js' %}"></script>
     </head>
